[package]
edition = "2024"
name = "esp32c3_snippets"
version = "0.1.0"

[[bin]]
name = "ble_example"
path = "./src/bin/ble_example.rs"

[[bin]]
name = "hello"
path = "./src/bin/hello.rs"

[[bin]]
name = "rgb_led"
path = "./src/bin/rgb_led.rs"

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32c3", "unstable"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32c3",
] }
heapless = { version = "0.8.0", default-features = false }
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["defmt", "nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
bt-hci = { version = "0.2", features = ["embassy-time", "uuid", "defmt"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = [
  "defmt",
], rev = "54cd0465ca497495b5890d896fc1f048f0a0f1ee" }
embassy-sync = "0.6.2"
embassy-futures = "0.1.1"
embedded-hal-async = "1.0.0"
ws2812-async = "0.3"
smart-leds = "0.4.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
